changed the sales page

--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginbg"
     tools:context=".Sales">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -23,6 +24,16 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
+    <View
+        android:id="@+id/total"
+        android:layout_width="393dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/itembg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvCatThree"
         android:layout_width="wrap_content"
@@ -38,11 +49,12 @@
         android:id="@+id/tvTotalRev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="44dp"
         android:text="TextView"
-        android:textStyle="bold"
         android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,7 +62,7 @@
         android:id="@+id/tvCatOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="56dp"
         android:text="TextView"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
