--- a/app/src/main/res/layout/activity_view_sold_item.xml
+++ b/app/src/main/res/layout/activity_view_sold_item.xml
@@ -206,29 +206,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/etSoldAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="25dp"
-        android:ems="10"
-        android:fontFamily="@font/latoregular"
-        android:hint="final selling price"
-        android:inputType="numberDecimal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <Button
-        android:id="@+id/buttonSold"
-        android:layout_width="wrap_content"
+        android:id="@+id/buttonRelist"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="25dp"
         android:fontFamily="@font/latobold"
-        android:text="$old"
+        android:text="Relist Item"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/etSoldAmount" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <com.google.android.material.imageview.ShapeableImageView
