--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -53,6 +53,7 @@
         android:text="TextView"
         android:textSize="35sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
