--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NardDogsInventory" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.NardDogsInventory" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#015FC6</item>
         <item name="colorPrimaryVariant">#45A3DC</item>
