--- a/app/src/main/res/layout/activity_view_sold_item.xml
+++ b/app/src/main/res/layout/activity_view_sold_item.xml
@@ -47,12 +47,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="100dp"
-
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="110dp"
         android:fontFamily="@font/latobold"
         android:text="Brand:"
         android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivItem" />
 
