--- a/app/src/main/res/layout/activity_modify_item.xml
+++ b/app/src/main/res/layout/activity_modify_item.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loginbg"
-    tools:context=".ItemList">
+    tools:context=".ModifyItem">
 
     <TextView
         android:id="@+id/etItemID"
@@ -167,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:text="Add"
+        android:text="Modify"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout2" />
 
