--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/latobold"
+        android:textColor="@color/white"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -206,6 +207,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/latobold"
+        android:textColor="@color/white"
         android:text="Mark as Sold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
