--- a/app/src/main/res/layout/activity_view_sold_item.xml
+++ b/app/src/main/res/layout/activity_view_sold_item.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/white"
         android:fontFamily="@font/latobold"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
@@ -215,6 +216,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="25dp"
         android:fontFamily="@font/latobold"
+        android:textColor="@color/white"
         android:text="Relist Item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
