--- a/app/src/main/res/layout/activity_view_inventory.xml
+++ b/app/src/main/res/layout/activity_view_inventory.xml
@@ -37,6 +37,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="4dp"
+        android:textColor="@color/white"
         android:fontFamily="@font/latobold"
         android:text="Search"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
