--- a/app/src/main/res/layout/activity_view_sold_inventory.xml
+++ b/app/src/main/res/layout/activity_view_sold_inventory.xml
@@ -37,7 +37,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="4dp"
+        android:textColor="@color/white"
         android:text="Search"
+        android:fontFamily="@font/latobold"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
