--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -29,10 +29,11 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/itembg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +53,7 @@
         android:id="@+id/tvTotalRev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/latobold"
         android:text="TextView"
         android:textColor="@color/white"
@@ -61,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/total" />
 
     <TextView
         android:id="@+id/tvCatOne"
@@ -157,5 +158,16 @@
             android:text="Past 90 days" />
 
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/tv_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="*Tap any category to see more info"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTotalRev" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
